docs/apache-airflow/2.2.4/_sources/_api/airflow/secrets/metastore/index.rst.txt
:py:mod:`airflow.secrets.metastore`
===================================

.. py:module:: airflow.secrets.metastore

.. autoapi-nested-parse::

   Objects relating to sourcing connections from metastore database



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.secrets.metastore.MetastoreBackend




.. py:class:: MetastoreBackend(**kwargs)

   Bases: :py:obj:`airflow.secrets.BaseSecretsBackend`

   Retrieves Connection object and Variable from airflow metastore database.

   .. py:method:: get_connection(self, conn_id, session=None) -> Optional[airflow.models.connection.Connection]

      Return connection object with a given ``conn_id``.

      :param conn_id: connection id
      :type conn_id: str


   .. py:method:: get_connections(self, conn_id, session=None) -> List[airflow.models.connection.Connection]

      Return connection object with a given ``conn_id``.

      :param conn_id: connection id
      :type conn_id: str


   .. py:method:: get_variable(self, key: str, session=None)

      Get Airflow Variable from Metadata DB

      :param key: Variable Key
      :type key: str
      :return: Variable Value



